# DB-Wahlinformationssystem

./: .gitignore  .travis.yml  Abschlusspräsentation-Demo-Skript.md  Procfile  README.md  demo_skript.md  zweitstimmen.csv
WIS/backend/: Cargo.toml  Dockerfile  Procfile  README.md
WIS/backend/queries/: Q3.2.md  Q3.3:3.4.md  Q4(Erststimme).md  Q4(Erststimme).sql  agg-sk-direktkandidatengewinner.sql  agg-sk-siegerpartei-erststimme.sql  agg-sk-siegerpartei-zweitstimme.sql  agg-sk-stimmverteilung-diff.sql  agg-sk-stimmverteilung.sql  agg-sk-wahlbeteiligung.sql  analysis-csu-age.sql  analysis-fdp-income.sql  bayern-landtagsmitglieder.sql  bayern-sitzverteilung.sql  bayern-stimmverteilung-gesamt.sql  get-tokens.py  partei-top10.sql  partei-überhangmandate.sql  query.py  sk-direktkandidatengewinner.sql  sk-siegerpartei-erststimme.sql  sk-siegerpartei-zweitstimme.sql  sk-stimmverteilung-diff.sql  sk-stimmverteilung.sql  stimmkreis-direktkandidat-gewinner.sql  stimmkreis-direktkandidatengewinner.sql  stimmkreis-parteiergebnis-differenz.sql  stimmkreis-parteiergebnis.sql  stimmkreis-parteistatistik.sql  stimmkreis-siegerpartei-erststimmen.sql  stimmkreis-siegerpartei-zweitstimmen.sql  tabelle-stimmkreise.sql  test.sql  top-10-knappste-verlierer.sql  top10.sql  wahl-landtagsmitglieder.sql  wahl-parteien.sql  wahl-stimmzettel-erststimme.sql  wahl-stimmzettel-zweitstimme.sql  wahl-top-10-knappste-sieger.sql  (+1 more)
WIS/backend/queries/bayern/: landtagsmitglieder.sql  sitzverteilung.sql  stimmverteilung.sql
WIS/backend/src/: cors.rs  main.rs  routes.rs  routes_stimmabgabe.rs
(+150 files in other folders)
