[package]
name = "wis-backend"
version = "0.1.0"
authors = ["Andreas Zimmerer <andreas.zimmerer@tum.de>"]

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
hdbconnect = "0.12.2"
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8.3"
regex = "1"

[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = ["json"]
